# praktyki_zawodowe

./: .gitignore  Dockerfile  Makefile  README.md  create_user_temp.py  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/api/dependencies/: dependencies.py
src/api/models/: create_session_data.py  join_session_data.py  register_data.py  session_data.py  user_data.py
src/api/routers/: session_router.py  user_router.py
src/app/: config.py
src/app/handlers/: delete_session_handler.py  get_current_user_handler.py  join_session_handler.py  leave_session_handler.py  session_creation_handler.py  show_user_sessions_handler.py  user_creation_handler.py  user_creation_handlers.py  user_login_handler.py
src/app/models/: app_models.py  models.py
src/app/services/: session_service.py  user_service.py
src/app/services/helpers/: hash_password.py  verify_password.py
src/database/: database.py  models.py  session_repository.py  user_repository.py  users.json
src/database/models/: session_table.py  user_sessions_table.py  user_table.py
src/services/: create_user.py  hash_password.py  register_user.py
