[project]
name='Warhammer_RPG_sim'
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "httpx>=0.28.1",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

